ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress 
  namespace: blog 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: xiejiati.net 
    http:
      paths:
      - path: /
        backend:
          serviceName: blog-svc
          servicePort: 80
